# sweep

./: .clippy.toml  .gitignore  .gitmessage  .pre-commit-config.yaml  .rustfmt.toml  Cargo.toml  INSTALL.md  LARGE_FILE_PLUGIN_GUIDE.md  Makefile  install.sh  package.json  uninstall.sh
.agent-os/instructions/core/: reflect-session.md
.agent-os/instructions/meta/: communication-guidelines.md  container-workflow.md
.agent-os/product/: decisions.md  mission-lite.md  mission.md  roadmap.md  tech-stack.md
.agent-os/specs/2025-09-13-rust-modernization/: spec-lite.md  spec.md
.agent-os/specs/2025-09-13-rust-modernization/sub-specs/: technical-spec.md
.agent-os/specs/2025-09-14-large-file-detection/: spec-lite.md  spec.md  tasks.md
.agent-os/specs/2025-09-14-large-file-detection/sub-specs/: technical-spec.md
.agent-os/specs/2025-09-14-python-plugin-support/: spec-lite.md  spec.md
.agent-os/specs/2025-09-14-python-plugin-support/sub-specs/: technical-spec.md
.agent-os/standards/: tech-stack.md
.github/workflows/: ci.yml
src/: main.rs  output.rs  project.rs  settings.rs  swpfile.rs
src/analyse_projects/: analyse_projects.rs  filter_by_modified_date.rs  mod.rs
src/discover_projects/: detect_cleanable_project.rs  discover_projects.rs  mod.rs
src/plugins/: filter.rs  integration_tests.rs  large_files.rs  large_files_enhanced.rs  mod.rs  progress.rs  scanner_tests.rs  tests.rs  ui.rs  utils.rs
src/utils/: file_utils.rs  process_queue.rs
