[package]
name = "sweep"
version = "1.0.4"
edition = "2021"
description = "Intelligent disk cleanup tool with large file detection and Git-aware protection"
authors = ["Piotr Roslaniec <p.roslaniec@gmail.com>"]
license = "MIT"
repository = "https://github.com/piotr-roslaniec/sweep"
readme = "README.md"
keywords = ["cleanup", "sweep", "disk", "large-files", "git-aware"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "sweep"
path = "src/main.rs"

[dependencies]
crossbeam = "0.8.0"
crossterm = "0.20.0"
dunce = "1.0.0"
git2 = "0.13.20"
ignore = "0.4.18"
indicatif = "0.17.0"
num_cpus = "1.11.1"
rayon = "1.5.1"
regex = "1.3.1"
structopt = "0.3.5"
term_size = "0.3.1"
tui = { version = "0.16.0", features = ["crossterm"] }
walkdir = "2.3.2"
yansi = "0.5.0"

[dev-dependencies]
tempdir = "0.3.7"
assert_cmd = "2.0"
predicates = "3.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
